Closed Bug 48900 Opened 25 years ago Closed 25 years ago

bloat tests failing intermittently with error on FTP site load

Categories

(Core Graveyard :: Networking: FTP, defect, P3)

All
Linux
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: dbaron, Assigned: dougt)

References

Details

The bloat tests on tinderbox (harpoon Linux, speedracer and bismark SunOS, and salerno HP-UX) are failing intermittently with an Error loading the FTP URL (ftp://ftp.mozilla.org/). (This is not timing out - I think the tests stop when there is an error loading a URL.) I can't reproduce this on my own machine. I'm not exactly sure when this started - it's past the beginning of tinderbox's memory now. I (and probably others) should have noticed it sooner - it looks like a timeout (which happens occasionally), but it's not. If someone can reproduce this, it would be nice to figure out what's going on here and get tinderbox green again most of the time so that we can get better leak stats. Marking All/Linux because tinderbox has no adequate way of marking as All Unix.
An interesting point I just noticed: When this happens, the log ends with WEBSHELL += 4, which probably means an error dialog popped up.
bryner suggested this *may* be a too many users dialog. Maybe we should use a less congested server?
I think the WEBSHELL += 4 could just be the sidebar finishing opening. I don't see it on my profile (no sidebar) when I use the build from coffee. The ftp URL doesn't load at all - it still displays the old page.
I'm not seeing this error on Tinderbox any more after waterson's checkin for bug 49626.
This was an *intermittent* problem. I suspect it will return.
1) It has returned 2) It's definitely not a dialog. I think it's just the sidebar.
We should do 2 things that will help us track this down: Put this diff into nsBrowserInstance.cpp (the tree is closed now, or I would): Index: nsBrowserInstance.cpp =================================================================== RCS file: /cvsroot/mozilla/xpfe/browser/src/nsBrowserInstance.cpp,v retrieving revision 1.151 diff -c -r1.151 nsBrowserInstance.cpp *** nsBrowserInstance.cpp 2000/08/22 00:14:23 1.151 --- nsBrowserInstance.cpp 2000/08/22 18:15:08 *************** *** 1535,1541 **** fflush(stdout); } else { ! fprintf(stdout, "Error loading URL %s \n", (const char*)url); fflush(stdout); } } //if (!isFrame) --- 1535,1541 ---- fflush(stdout); } else { ! fprintf(stdout, "Error loading URL %s: %0x \n", (const char*)url, aStatus); fflush(stdout); } } //if (!isFrame) And put some code in somewhere to echo dialog text to the console (in an NS_WARNING). That way we'll be able to see a little more of what's going on when the tinderbox tests fail.
I have made the suggested change. Next time the bloat tests fail, reopen this bug and provide the error code thats spit out with "Error loading URL..."
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Reopening as gagan said: Error loading URL ftp://ftp.mozilla.org/: 80004005
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
For reference, nsError.h line 155 is: #define NS_ERROR_FAILURE ((nsresult) 0x80004005L) So, NS_ERROR_FAILURE.
...just as I suspected... useless information. This means we're going to have to figure out how to reproduce the problem with a debug build, and step through it.
Gagan: Let's do this: Get Leaf to turn on ftp logging for the tinderbox machine: setenv NSPR_LOG_MODULES nsFTPProtocol:5 Don't set NSPR_LOG_FILE so that things just go to stdout -- then we'll see them in the tinderbox log. If that doesn't show up anything when the failure happens, then try adding ,nsSocketTransport:5 to the log.
Cc'ing Leaf to see if he can turn on the log module for tinderbox that will let us see what's going on when we fail.
I can reproduce this quite easily with a build at Netscape displaying locally. Perhaps it's timing related and shows up when using a remote display? Anyway, here's the log (nsFtpProtocol:5) from a build from a few weeks ago that I had lying around: Enabling Quirk StyleSheet Setting content window Opening file cookperm.txt failed *** Pulling out the charset in SetSecurityButton Enabling Quirk StyleSheet 1024[8069578]: WARNING: not calling OnDataAvailable, file nsAsyncStreamListener.cpp, line 403 WARNING: not calling OnDataAvailable, file nsAsyncStreamListener.cpp, line 403 Enabling Quirk StyleSheet ########## PageCycler loaded: http://www.mozilla.org/ 1024[8069578]: nsFTPChannel::AsyncRead() called Document http://www.mozilla.org/ loaded successfully 6151[8611d88]: nsFtpConnectionThread::Process() started for 8918fb0 (spec =ftp://ftp.mozilla.org/) 6151[8611d88]: 8918fb0 Process() - READ_BUF - read "220 ftp.mozilla.org FTP server (Version wu-2.6.1(1) Thu Jul 6 22:05:40 PDT 2000) ready. " (89 bytes) 6151[8611d88]: 8918fb0 Process() - S_USER - 6151[8611d88]: 8918fb0 Writing "USER anonymous " 6151[8611d88]: SUCCEEDED 6151[8611d88]: 8918fb0 Process() - READ_BUF - read "331 Guest login ok, send your complete e-mail address as password. " (68 bytes) 6151[8611d88]: 8918fb0 Process() - S_PASS - 6151[8611d88]: 8918fb0 Writing "PASS mozilla@ " 6151[8611d88]: SUCCEEDED 6151[8611d88]: 8918fb0 Process() - READ_BUF - read "230- " (6 bytes) 6151[8611d88]: 8918fb0 Process() - READ_BUF - read "230-################################################ 230- 230-anonymous@h-208-12-37-96.netscape.com, welcome to ftp.mozilla.org! 230-Time is here Wed Sep 6 19:36:17 2000 230- 230-You are user 47 of max. allowed 512 " (223 bytes) 6151[8611d88]: 8918fb0 Process() - READ_BUF - read "230- 230-Enjoy! 230- 230-ftp@mozilla.org 230- 230-################################################ 230- 230-Welcome to ftp.mozilla.org! 230- 230-This is the main distribution point of software and developer tools 230-related to the Mozilla project. For more information, see our home 230-page (http://www.mozilla.org/) Go here to download Netscape Communicator: 230- http://home.netscape.com/download/ 230- 230-A list of ftp.mozilla.org's mir 6151[8611d88]: 8918fb0 Process() - READ_BUF - read "ntity List, and Specially Designated Nationals). 230- 230-If you plan to mirror our site read our crypto FAQ. Send mail to 230-mirrors@mozilla.org to be added to our mirrors list. 230- 230- http://www.mozilla.org/crypto-faq.html#2-1 230- 230-We do not guarantee that any source code or executable code 230-available from the mozilla.org domain is Year 2000 compliant. 230- 230-Contact webmaster@mozilla.org with any problems. " (447 byt 6151[8611d88]: 8918fb0 Process() - READ_BUF - read "230- 230-Please read the file README 230- it was last modified on Thu Feb 24 14:06:21 2000 - 195 days ago 230 Guest login ok, access restrictions apply. " (158 bytes) 6151[8611d88]: 8918fb0 Process() - S_SYST - 6151[8611d88]: 8918fb0 Writing "SYST " 6151[8611d88]: SUCCEEDED 6151[8611d88]: 8918fb0 Process() - READ_BUF - read "215 UNIX Type: L8 " (19 bytes) 6151[8611d88]: 8918fb0 Process() - S_PWD - 6151[8611d88]: 8918fb0 Writing "PWD " 6151[8611d88]: SUCCEEDED 6151[8611d88]: 8918fb0 Process() - READ_BUF - read "257 "/" is current directory. " (31 bytes) 6151[8611d88]: 8918fb0 Process() - S_PASV - 6151[8611d88]: 8918fb0 Writing "PASV " (addr is v4) 6151[8611d88]: SUCCEEDED 6151[8611d88]: 8918fb0 Process() - READ_BUF received EOF 6151[8611d88]: 8918fb0 Process() - COMPLETE 6151[8611d88]: nsFtpConnectionThread::Process() ended for 8918fb0 (spec =ftp://ftp.mozilla.org/) 1024[8069578]: ~nsFtpConnectionThread() for ftp://ftp.mozilla.org/ Error loading URL ftp://ftp.mozilla.org/ WEBSHELL+ = 4
Jud: Any idea what's going on here?
->rjc
Assignee: gagan → rjc
Status: REOPENED → NEW
Hi dougt, welcome to necko :)
Assignee: rjc → dougt
Blocks: 62352
Status: NEW → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
This should not happen anymore. Marking as FIXED.
It hasn't been happening for quite a while, although something became a lot slower or started hanging in the past few days so that the bloat tests are timing out a lot...
verified
Status: RESOLVED → VERIFIED
ftp: url is NOT part of bloat test right now, bug filed on dougt to fix this. Just making sure we have verified this properly.
Component: Networking → Networking: FTP
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.