We now report status error along with the "Error loading URL" This will help us catch the reason of unsuccessful URL loads. See bug 48900 for details. r=warren